[luxom] completed initial version of luxom.io binding - changes after review by @kaikreuzer and @wborn
Signed-off-by: Kris Jespers <kriasoft@telenet.be>